index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body,
html {
  background-color: #fcf4eb;
  position: relative;
  scroll-behavior: smooth;
  scroll-padding-top: 160px;
}

@font-face {
  font-family: "SeasonSansTRIAL-Bold";
  src:
    url("./fonts/seasons/SeasonSansTRIAL-Bold.woff") format("woff"),
    url("./fonts/seasons/SeasonSansTRIAL-Bold.woff2") format("woff2");
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: "SeasonSansTRIAL-Medium";
  src: url("./fonts/seasons/SeasonSans-TRIAL-Medium.ttf") format("truetype");
  font-weight: 550;
  font-style: normal;
}

@font-face {
  font-family: "SeasonSansTRIAL-Regular";
  src:
    url("./fonts/seasons/SeasonSansTRIAL-Regular.woff") format("woff"),
    url("./fonts/seasons/SeasonSansTRIAL-Regular.woff2") format("woff2");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "SeasonSansTRIAL-Light";
  src:
    url("./fonts/seasons/SeasonSansTRIAL-Light.woff") format("woff"),
    url("./fonts/seasons/SeasonSansTRIAL-Light.woff2") format("woff2");
  font-weight: 300;
  font-style: normal;
}

@font-face {
  font-family: "SeasonMix-Medium";
  src:
    url("./fonts/seasonsmix/SeasonMixTRIAL-Medium.woff") format("woff"),
    url("./fonts/seasonsmix/SeasonMixTRIAL-Medium.woff2") format("woff2");
  font-weight: 800;
  font-style: normal;
}

@font-face {
  font-family: "SeasonMix-Regular";
  src:
    url("./fonts/seasonsmix/SeasonMixTRIAL-Regular.woff") format("woff"),
    url("./fonts/seasonsmix/SeasonMixTRIAL-Regular.woff2") format("woff2");
  font-weight: 420;
  font-style: normal;
}

.grid-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  z-index: 0;
}

.grid-line {
  background-color: rgba(0, 0, 0, 0.5);
  position: absolute;
  top: 0;
  bottom: 0;
  width: 1px;
}

.grid-line:nth-child(1) {
  left: 25%;
}
.grid-line:nth-child(2) {
  left: 50%;
  transform: translate(-50%);
}
.grid-line:nth-child(3) {
  left: 75%;
}

.container {
  padding: 0 20px;
  margin: 0 auto;
  width: 100%;
  max-width: 100%;
}

.overlay {
  position: relative;
  z-index: 1;
  overflow: hidden;
}

#navbar {
  width: 100%;
  position: fixed;
  background-color: #fcf4eb;
  top: 0;
  left: 0;
  height: 156px;
  z-index: 1;
  transition: all 0.3s ease;
}

#navbar.scrolled {
  background: rgba(252, 244, 235, 0.55);
  backdrop-filter: blur(24px);
  -webkit-backdrop-filter: blur(24px);
}

.banner {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  margin-left: -20px;
}

.banner-textbox {
  display: flex;
  align-items: center;
  background-color: #f96243;
  font-family: "SeasonSansTRIAL-Medium";
  font-weight: 550;
  font-size: 16px;
  width: calc(75% - 10px);
  padding: 10px 20px;
}

.menu ul {
  list-style: none;
}

.lang-togglebox ul {
  list-style: none;
}

.lang-togglebox {
  width: calc(25% - 10px);
}

.lang-togglebox ul {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  flex-wrap: wrap;
}

.lang-togglebox ul li:not(:last-child) {
  margin-right: 35px;
}

.lang-togglebox ul li a {
  font-family: "SeasonSansTRIAL-Regular";
  font-size: 16px;
  font-style: normal;
  line-height: normal;
  font-weight: 400;
  position: relative;
  padding: 4px 15px 4px 5px;
  text-decoration: none;
  color: #000;
}

.mobile-lang-togglebox {
  display: none;
}

.selected {
  background-color: #f96243;
  padding: 1px 14px 1px 6px;
  text-align: left;
}

.navigation {
  padding: 20px 0;
}

.navigation_bottom {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
  position: relative;
}

.aral {
  width: 155px;
}

.aral img {
  height: 65px;
  width: 100%;
}

.main_logo {
  display: block;
}

.mobile_logo {
  display: none;
}

.menu {
  width: calc(70% - 10px);
}

.menu ul {
  display: flex;
  align-items: center;
  justify-content: center;
}

.menu ul li:not(:last-child) {
  margin-right: 60px;
}

.menu > ul > li > a {
  font-size: 16px;
  font-family: "SeasonSansTRIAL-Regular";
  text-decoration: none;
  color: #000;
}

#mobile-menu {
  display: none;
}

.school {
  width: 245px;
}

.school img {
  width: 100%;
  height: 65px;
}

.hamburger_button {
  position: absolute;
  top: 0;
  bottom: 0;
  right: 0;
  margin: auto;
  cursor: pointer;
  display: none;
}

.hamburger_rect {
  width: 34px;
  height: 34px;
  border: 1px solid #000;
  position: relative;
}

.hamburger_rect::before {
  content: "";
  position: absolute;
  width: 18px;
  height: 18px;
  background-color: #f96243;
  margin: auto;
  inset: 0;
}

.square {
  position: absolute;
  background-color: #000;
  z-index: 1;
  width: 21px;
  height: 21px;
  left: 0;
  right: 0;
  top: 145px;
  margin: auto;
}

#hero {
  padding-top: 205px;
  padding-bottom: 50px;
  border-bottom: 1px solid #000;
}

.hero-wrapper {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
}

.hero-image {
  width: calc(50% - 10px);
  display: flex;
  align-items: center;
  justify-content: center;
}

.hero-image img {
  width: 100%;
  max-height: 800px;
  object-fit: cover;
  object-position: center;
}

.hero-box {
  width: calc(50% - 10px);
}

.hero-text {
  font-size: 36px;
  color: #000;
  font-weight: 420;
  padding: 90px 50px;
  background-color: #fcf4eb;
  position: relative;
  font-family: "SeasonMix-Regular";
}

.hero-text::before {
  content: "";
  position: absolute;
  top: 0;
  left: -10px;
  height: 1px;
  width: calc(100% + 30px);
  pointer-events: none;
  background-color: #000;
}

.hero-text::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: -10px;
  height: 1px;
  width: calc(100% + 30px);
  pointer-events: none;
  background-color: #000;
}

#intro {
  position: relative;
  height: 507px;
}

.intro-right-box {
  position: absolute;
  top: 0;
  pointer-events: none;
  z-index: -1;
  left: 75%;
}
/* ... */

